--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>George Tapia - Passionate, creative dev.</title>
     <link rel="icon" href="/images/logo-g.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="CSS/index.css">
 
 </head>
 <body>
@@ -82,6 +82,6 @@
     </div>
 </div>
 
-    <script type="module" src="js/index.js"></script>
+    <script type="module" src="JS/index.js"></script>
 </body>
 </html>
