adding the projects section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="CSS/index.css">
 
 </head>
+
+<div id="slash-effect" class="effect-container">
+    <div class="slash"></div>
+    <div class="portal"></div>
+</div>
+  
 <body>
 
     <!-- pedal intro -->
@@ -48,7 +54,7 @@
             <span></span>
             Home
         </a>
-        <a href="/maintenance-notifications/under-construction.html">
+        <a href="/portfolio/projects.html">
             <span></span>
             <span></span>
             <span></span>
@@ -78,7 +84,7 @@
                 </a>
             </div>
         </div>
-        <img src="./goku-rose-sitting-nobg.png" alt="Description of Image" class="bottom-right-image">
+        <img src="./madeup-character-removebg-preview.png" alt="Description of Image" class="bottom-right-image"  bottom: 100px;">
     </div>
 </div>
 
