--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
-    <link rel="stylesheet" href="/css/projects.css">
+    <link rel="stylesheet" href="CSS/projects.css">
 </head>
 <body>
 
@@ -123,6 +123,6 @@
 
 </div>
 
-<script src="/js/projects.js"></script>
+<script src="JS/projects.js"></script>
 </body>
 </html>
