adjusted linear regression png

--- a/portfolio/linear-regression.html
+++ b/portfolio/linear-regression.html
@@ -155,7 +155,7 @@
     .sidebar .user__pic {
         width: 10rem;
         height: 10rem;
-        background: url(/images/data_analysis.png);
+        background: url(/images/car-linear-regression.png);
         background-size: cover;
         margin-right: 0.5rem;
         border-radius: 50%;
