--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>George Tapia - Software Engineer | Projects</title>
+    <title>George Tapia - Portfolio</title>
+    <link rel="icon" href="/images/logo-g.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
-    <link rel="stylesheet" href="CSS/projects.css">
+    <link rel="stylesheet" href="/CSS/projects.css">
 </head>
 <body>
 
