--- a/portfolio/home.html
+++ b/portfolio/home.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>George Tapia - Software Engineer</title>
+    <title>George Tapia - Passionate, creative dev.</title>
+    <link rel="icon" href="/images/logo-g.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="CSS/index.css">
+    <link rel="stylesheet" href="/CSS/index.css">
 
 </head>
+  
 <body>
 
+<!-- Home page -->
 <div class="page-container">
     <div class="main-content" id="particle-animation">
         <div class="moon"></div>
@@ -28,12 +31,12 @@
             <span></span>
             Projects
         </a>
-        <a href="#">
+        <a href="/maintenance-notifications/under-construction.html">
             <span></span>
             <span></span>
             <span></span>
             <span></span>
-            Contact
+            Blog
         </a>
         </div>
         <div id="hero">
@@ -43,18 +46,18 @@
                 <a href="mailto:gtapia.2400@gmail.com" target="_blank" class="icon-link">
                     <i class="fa fa-envelope-o fa-3x icon" aria-hidden="true"></i>
                 </a>
-                <a href="https://www.linkedin.com/in/your-linkedin-profile/" target="_blank" class="icon-link">
+                <a href="https://www.linkedin.com/in/g-tapia/" target="_blank" class="icon-link">
                     <i class="fa fa-linkedin-square fa-3x icon" aria-hidden="true"></i>
                 </a>
-                <a href="https://github.com/your-github-username" target="_blank" class="icon-link">
+                <a href="https://github.com/g-tapia" target="_blank" class="icon-link">
                     <i class="fa fa-github-alt fa-3x icon" aria-hidden="true"></i>
                 </a>
             </div>
         </div>
-        <img src="./madeup-character-removebg-preview.png" alt="Description of Image" class="bottom-right-image">
+        <img src="/madeup-character-removebg-preview.png" alt="Description of Image" class="bottom-right-image"  bottom: 100px;">
     </div>
 </div>
 
-    <script type="module" src="JS/index.js"></script>
+    <script type="module" src="/JS/index.js"></script>
 </body>
 </html>
