removed javascript code for new feature

--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -30,12 +30,12 @@
                 <span></span>
                 Projects
             </a>
-            <a href="contact.html">
+            <a href="/maintenance-notifications/under-construction.html">
                 <span></span>
                 <span></span>
                 <span></span>
                 <span></span>
-                Contact
+                Blog
             </a>
         </div>
 
