Added a few more visuals to the EDA. Also, a few more conclusions on various analysis of features.

--- a/portfolio/decision-tree-classifier-hotel-booking-cancellations.html
+++ b/portfolio/decision-tree-classifier-hotel-booking-cancellations.html
@@ -1865,9 +1865,9 @@ cat(&quot;Number of guests who canceled reservation:&quot;, canceled_count, &quo
 </div>
 <div id="room-pricing" class="section level3">
 <h3>Room Pricing:</h3>
-<p>“Does the Comparison Between Reserved and Assigned Room Types Impact
+<p>Does the Comparison Between Reserved and Assigned Room Types Impact
 Cancellation Rates, and What Other Factors Might Influence This
-Trend?”</p>
+Trend?</p>
 <p>Contrary to initial expectations, our analysis uncovered a
 counterintuitive trend: a majority of reservations with matched room
 types (i.e., the room reserved and the actual room provided) indicated
