--- a/portfolio/linear-regression.html
+++ b/portfolio/linear-regression.html
@@ -1782,7 +1782,7 @@ display: none;
 
   <div class="columns-container">
   <div class="column">
-    <h4><strong>Instructor:</strong> <a href="https://youtu.be/8oDjrAknr4o?t=11"  style="color: rgb(47, 125, 203);">Vijay Gurbani (Chief Data Scientist at Vail System, Inc)</a></h4>
+    <h4><strong>Instructor:</strong> <a href="https://youtu.be/8oDjrAknr4o?t=11"  style="color: rgb(47, 125, 203);">Vijay Gurbani (Chief Data Scientist at Vail Systems, Inc)</a></h4>
     <h4><strong>Webpage Design</strong></h4>
     <p>Hey there, welcome to my webpage! I've put this together myself, taking cues from the background picture's color scheme. I wanted to step away from the usual look of sites like Medium or LinkedIn. The whole idea here is to use warm colors that are easy on the eyes, and to organize the content into clear sections for smooth browsing. You'll see R code on this page – that's all my own work, along with the comments and the output of the code. I've marked my comments with a '#' symbol and colored them blue to make them stand out. In this project, I also have white text comments above each section." </p>
     <h4><strong>Project Summary</strong></h4>
