added additional text and adjusted formatting

--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -48,7 +48,7 @@
                   <a href="/portfolio/advertisement-analysis.html" style="text-decoration: none; color: inherit;">
                     <card data-image="/images/data_analysis.png">
                         <h1 slot="header">Data Analysis (Advertisement Budget)</h1>
-                        <p slot="content">  In this project, I explore the various features of a real car dataset and how they can affect a vehicle's fuel efficiency (MPG) through a linear regression model that I implemented. This analysis provides a clear understanding of how various attributes impact automotive performance.
+                        <p slot="content">  A custom webpage showcasing data analysis on the impact of TV, radio, and newspaper advertising on sales, featuring visualizations and key insights using R.
 
                         </p>
                     </card>
