adjusted lighting for blog cards

--- a/portfolio/blog.html
+++ b/portfolio/blog.html
@@ -22,7 +22,7 @@
         }
 
         header h1 {
-            color: #f0a500;
+            color: #f403dc;
             font-size: 3rem;
         }
 
@@ -43,8 +43,8 @@
         .section h2 {
             margin-bottom: 20px;
             font-size: 2rem;
-            color: #f0a500;
-            border-bottom: 2px solid #f0a500;
+            color: #f403dc;
+            border-bottom: 2px solid #f403dc;
             padding-bottom: 10px;
         }
 
@@ -58,13 +58,13 @@
         .quotes p::before {
             content: "“";
             font-size: 2rem;
-            color: #f0a500;
+            color: #f403dc;
         }
 
         .quotes p::after {
             content: "”";
             font-size: 2rem;
-            color: #f0a500;
+            color: #f403dc;
         }
 
         /* About Me Section */
@@ -91,11 +91,11 @@
 
         .article:hover {
             transform: translateY(-10px);
-            box-shadow: 0 4px 20px rgba(240, 165, 0, 0.4);
+            box-shadow: 0 4px 20px #f403dc;
         }
 
         .article h3 {
-            color: #f0a500;
+            color: #f403dc;
             margin-bottom: 15px;
         }
 
@@ -106,7 +106,7 @@
 
         .article a {
             text-decoration: none;
-            color: #f0a500;
+            color: #f403dc;
             font-weight: bold;
             transition: color 0.2s ease;
         }
