adjusted anchor links and tested new page transition (still needs work)

--- a/portfolio/home.html
+++ b/portfolio/home.html
@@ -6,7 +6,12 @@
     <title>George Tapia - Passionate, creative dev.</title>
     <link rel="icon" href="/images/logo-g.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/CSS/index.css">
+    <link rel="stylesheet" href="/g-tapia.github.io/CSS/index.css"> 
+    <!-- 
+    /CSS/index.css 
+    /portfolio/projects.html
+    /maintenance-notifications/under-construction.html
+    -->
 
 </head>
   
@@ -24,14 +29,14 @@
             <span></span>
             Home
         </a>
-        <a href="/portfolio/projects.html">
+        <a href="/g-tapia.github.io/portfolio/projects.html">
             <span></span>
             <span></span>
             <span></span>
             <span></span>
             Projects
         </a>
-        <a href="/maintenance-notifications/under-construction.html">
+        <a href="/g-tapia.github.io/maintenance-notifications/under-construction.html">
             <span></span>
             <span></span>
             <span></span>
@@ -54,10 +59,10 @@
                 </a>
             </div>
         </div>
-        <img src="/madeup-character-removebg-preview.png" alt="Description of Image" class="bottom-right-image"  bottom: 100px;">
+        <img src="/g-tapia.github.io/madeup-character-removebg-preview.png" alt="Description of Image" class="bottom-right-image"  bottom: 100px;">
     </div>
 </div>
 
-    <script type="module" src="/JS/index.js"></script>
+    <script type="module" src="/g-tapia.github.io/JS/index.js"></script>
 </body>
 </html>
