modifying US Census html file (not deployed yet)

--- a/portfolio/advanced-decision-tree-classifier-US-Census.html
+++ b/portfolio/advanced-decision-tree-classifier-US-Census.html
@@ -12,9 +12,6 @@
     .column p {
       padding-left: 25px;
     }
-    .container-fluid main-container{
-      color: #000000;
-    }
 
     .columns-container {
             display: flex;
@@ -131,6 +128,7 @@
         /* background-image: url(https://images.unsplash.com/photo-1635492491273-455af7728453?q=80&w=1920&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D); */
         background-color: #000000;
         width: 100%;
+        background-size: cover;
     }
 
     .sidebar li:hover {
@@ -2984,7 +2982,7 @@ padding-left: 30px;
 padding-right: 40px;
 }
 div.main-container {
-max-width: 1200px;
+max-width: fit-content;
 }
 div.tocify {
 width: 20%;
